--- a/client/vue-soft-ui-dashboard-main/package.json
+++ b/client/vue-soft-ui-dashboard-main/package.json
@@ -29,6 +29,7 @@
     "core-js": "3.6.5",
     "jkanban": "^1.3.1",
     "vue": "3.2.0",
+    "vue-axios": "^3.5.1",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
