--- a/client/vue-soft-ui-dashboard-main/package.json
+++ b/client/vue-soft-ui-dashboard-main/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "vue-soft-ui-dashboard",
+  "name": "TCC",
   "version": "3.0.0",
   "private": true,
-  "author": "Creative Tim",
-  "license": "SEE LICENSE IN <https://www.creative-tim.com/license>",
-  "description": "VueJS version of Soft UI Dashboard PRO by Creative Tim",
-  "homepage": "https://demos.creative-tim.com/vue-soft-ui-dashboard/",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/vue-soft-ui-dashboard/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/vue-soft-ui-dashboard.git"
-  },
+  "author": "Gabriel, Ruan, Jefferson, Denis e Yago",
+  "license": "Livre para uso",
+  "description": "Admin para controle de uma empresa, feito como projeto para o TCC",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
