--- a/client/vue-soft-ui-dashboard-main/package.json
+++ b/client/vue-soft-ui-dashboard-main/package.json
@@ -20,10 +20,12 @@
     "chart.js": "3.6.0",
     "core-js": "3.6.5",
     "jkanban": "^1.3.1",
+    "read-excel-file": "^5.5.3",
     "vue": "3.2.0",
     "vue-axios": "^3.5.1",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "^4.0.0-0",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
