--- a/client/vue-soft-ui-dashboard-main/package.json
+++ b/client/vue-soft-ui-dashboard-main/package.json
@@ -25,6 +25,7 @@
     "vue-axios": "^3.5.1",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "^4.0.0-0",
+    "vue-select": "^4.0.0-beta.5",
     "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.2"
   },
